replace base 64 decoder with one from java.utils according to https://stackoverflow.com/questions/19743851/base64-java-encode-and-decode-a-string