@@ -8,6 +8,7 @@ import java.io.File;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.JFileChooser;
@@ -15,7 +16,7 @@ import javax.swing.SwingUtilities;
 import javax.swing.filechooser.FileFilter;
 import javax.swing.filechooser.FileNameExtensionFilter;
 
-import javax.xml.bind.DatatypeConverter;
+//import javax.xml.bind.DatatypeConverter;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
@@ -163,9 +164,10 @@ public class EasyXMLReader {
             return null;
         }
     }
+    
 
     public byte[] getB64(String name) {
-        return DatatypeConverter.parseBase64Binary(getRaw(name));
+        return Base64.getDecoder().decode(getRaw(name));
     }
 
     public float[] getAsciiFloatArr(String name) {
